fixed card page letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
     padding: 10px;
     flex: 300px;
     margin: 20px;
+    letter-spacing: 1px;
     background-color: #00dade60;
     background-image: linear-gradient(140deg, #00dade77 0%, #fb00ff85 100%);
 }
